<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/spacing_normal"
        android:paddingHorizontal="36dp">

        <TextView
            android:id="@+id/tv_source_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text.h3"
            android:text="@string/source_from"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_source1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text.body"
            android:text="@string/source1"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/tv_source_from"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_source2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text.body"
            android:text="@string/source2"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/tv_source1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_source3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text.body"
            android:text="@string/source3"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/tv_source2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_source4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/text.body"
            android:text="@string/source4"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintTop_toBottomOf="@id/tv_source3"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
