<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/spacing_normal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_back"
                android:padding="12dp"
                android:layout_marginStart="@dimen/spacing_normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_page_title"
                android:textAppearance="@style/text.h1"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/btn_back" />

            <View
                android:id="@+id/ul_title"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorText"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_change_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_setting"
                android:textAppearance="@style/text.h3"
                android:textColor="@color/colorText"
                android:gravity="start|center_vertical"
                android:paddingVertical="12dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/ul_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textAppearance="@style/text.h3"
                android:textColor="@color/colorText"
                android:gravity="start|center_vertical"
                android:paddingVertical="12dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/btn_change_setting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_legal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/legal_notice"
                android:textAppearance="@style/text.h3"
                android:textColor="@color/colorText"
                android:gravity="start|center_vertical"
                android:paddingVertical="12dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/btn_help"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_api_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/api_source"
                android:textAppearance="@style/text.h3"
                android:textColor="@color/colorText"
                android:gravity="start|center_vertical"
                android:paddingVertical="12dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/btn_legal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_open_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_source_license"
                android:textAppearance="@style/text.h3"
                android:textColor="@color/colorText"
                android:gravity="start|center_vertical"
                android:paddingVertical="12dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/btn_api_source"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textAppearance="@style/text.h3"
                android:textColor="@color/colorText"
                android:gravity="start|center_vertical"
                android:paddingVertical="12dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/btn_open_source"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/withdraw"
                android:textAppearance="@style/text.h3"
                android:textColor="@color/colorText"
                android:gravity="start|center_vertical"
                android:paddingVertical="12dp"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                app:layout_constraintTop_toBottomOf="@id/btn_logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
