<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="com.pns.bbaspassenger.view.dialogs.BusSelectDialog" />

        <variable
            name="viewModel"
            type="com.pns.bbaspassenger.viewmodel.ReservationViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_normal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_bus_title"
                android:textAppearance="@style/text.h1"
                android:textColor="@color/colorText"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_half_normal"
                busLocationData="@{viewModel.busLocations}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toTopOf="@id/cl_btns" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/text.h2"
                android:textColor="@color/colorText"
                android:layout_margin="@dimen/spacing_normal"
                android:visibility="@{viewModel.busLocations.size() > 0}"
                android:text="@string/bus_arrival_info_not_found"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintBottom_toTopOf="@id/cl_btns"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_btns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_half_normal"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_cancel"
                    style="@style/dialog.button.outline"
                    android:onClick="@{() -> view.cancelReservation()}"
                    app:layout_constraintTop_toTopOf="@id/btn_reservation"
                    app:layout_constraintEnd_toStartOf="@id/btn_reservation"
                    app:layout_constraintBottom_toBottomOf="@id/btn_reservation" />

                <Button
                    android:id="@+id/btn_reservation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_reservation"
                    android:onClick="@{() -> view.confirmReservation()}"
                    style="@style/dialog.button.fill"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/spacing_normal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/spacing_normal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
